# egg-1

./: .gitignore  Cargo.toml  Makefile  README.md  search-index.js  source-files.js
.github/workflows/: build.yml
egg/: all.html  enum.Justification.html  enum.StopReason.html  index.html  sidebar-items.js  struct.Color.html  struct.ColorId.html  struct.ConditionEqual.html  struct.ConditionalApplier.html  struct.EClass.html  struct.EGraph.html  struct.Id.html  struct.Iteration.html  struct.RecExpr.html  struct.Report.html  struct.Subst.html  struct.Symbol.html  struct.SymbolLang.html  struct.Var.html  trait.Applier.html  trait.Condition.html  type.ColorParents.html
egg/colors/: struct.Color.html  type.ColorParents.html
implementors/core/clone/: trait.Clone.js
implementors/core/cmp/: trait.Eq.js  trait.Ord.js  trait.PartialEq.js  trait.PartialOrd.js
implementors/core/convert/: trait.From.js
implementors/core/default/: trait.Default.js
implementors/core/fmt/: trait.Debug.js  trait.Display.js
implementors/core/hash/: trait.Hash.js
implementors/core/marker/: trait.Copy.js  trait.Freeze.js  trait.Send.js  trait.StructuralEq.js  trait.StructuralPartialEq.js  trait.Sync.js  trait.Unpin.js
implementors/serde/de/: trait.Deserialize.js
implementors/serde/ser/: trait.Serialize.js
implementors/std/panic/: trait.RefUnwindSafe.js  trait.UnwindSafe.js
src/: colored_union_find.rs  colors.rs  dot.rs  eclass.rs  egraph.rs  explain.rs  explanation.rs  expression_ops.rs  extract.rs  language.rs  lib.rs  machine.rs  macros.rs  multipattern.rs  pattern.rs  reconstruct.rs  rewrite.rs  run.rs  ser.rs  subst.rs  test.rs  tools.rs  unionfind.rs  util.rs
src/egg/: colors.rs.html  egraph.rs.html  expression_ops.rs.html  lib.rs.html  machine.rs.html  pattern.rs.html  rewrite.rs.html  subst.rs.html  unionfind.rs.html
src/eggstentions/: appliers.rs  conditions.rs  costs.rs  expression_ops.rs  mod.rs  pretty_string.rs  reconstruct.rs  searchers.rs  tree.rs
src/tutorials/: _02_getting_started.rs
tests/: datalog.rs  lambda.rs  math.rs  prop.rs
web-demo/: Cargo.toml
